--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -2433,107 +2433,107 @@ stories:
   domain: http://www.advocate-news.com/
   link: https://www.advocate-news.com/2019/06/28/boomers-not-millennials-may-be-the-most-active-generation-in-the-gig-economy/
 images:
-- name: nyc-flag-nycflag-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-alberto-giacometti.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dali-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dali-two.JPG
-- name: walled-garden-walled-garden-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
-- name: old-door-lock-old-door-lock-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit.jpg
-- name: cargo-ship-cargo-ship-on-sea-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-far-away.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-wols.jpg
-- name: border-fence-border-fence-on-hill-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-three.jpg
-- name: white-house-lawn-white-house-lawn-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sunday.jpg
-- name: eduardo-eduardo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-aqua.jpg
-- name: bordercrossing-bordercrossing-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-clean-view.jpg
-- name: old-cabin-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gred-mash.jpg
-- name: containership-containership-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit-2.jpg
-- name: old-cabin-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
-- name: nyc-flag-nycflag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag.jpg
-- name: powerlines-power-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-monet-one.jpg
-- name: nyc-flag-nycflag-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-dresden.jpg
-- name: white-house-lawn-white-house-lawn-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-dresden.jpg
-- name: mosaic-face-mosaic-face-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crunch-paper.jpg
-- name: razorcliff-razorcliff-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-far-away.jpg
-- name: abandonedbuildings_diego_rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_diego_rivera1.jpg
-- name: beach-rocks-beach-rocks-currents-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smooth-ride.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit-2.jpg
-- name: aws-s3-stories-castle-on-hill-edinburgh-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-copper-circuit.JPG
-- name: berlinwall-DSC-0084-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-paper.jpg
-- name: old-barn-old-barn-1500-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-wols.jpg
-- name: old-church-oldchurch-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-internet-numbers.jpg
-- name: border-crossing-bordercrossing.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing.png
-- name: ellis-island-ellisisland-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-dali.jpg
-- name: berlinwall2-berlinwall-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kandinsky-bv.jpg
-- name: window-window-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-storm.jpg
-- name: san-francisco-street-view-san-francisco-street-view-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-neo-instinct.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
-- name: hollywood-building-hollywood-building-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-spagetti-accident.jpg
-- name: fence-fence-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-internet-numbers.jpg
-- name: udnie-IMG_7880.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7880.jpg
-- name: old-church-oldchurch-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
-- name: berlinwall-DSC-0084-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alberto-giacometti.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-wols.JPG
-- name: 35562068104_fa20c57575-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wave.jpg
-- name: containership-containership-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-electricity.jpg
-- name: paris-paris-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-umberto-bocc.jpg
-- name: hollywood-building-hollywood-building-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colorful-blocks.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
-- name: udnie-concert-hall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-concert-hall.jpg
-- name: border-fence-border-fence-on-hill-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-neo-instinct.jpg
-- name: bluelake-clean-view-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-01-17-38.jpg
-- name: trucksilo-trucksilo-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kand-two.jpg
-- name: border-crossing-bordercrossing-yellow-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-paper.png
-- name: blossombar-neo-instinct-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-50-62.jpg
-- name: downtown-trucksilo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-green-zuma.jpg
-- name: art-museum-art-museum-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dry-skin.jpg
+- name: aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
+- name: dragon_close-up-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-nazi-invasion.jpg
+- name: containership-containership-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-horiz-circuit.jpg
+- name: power-lines-power-lines-empty-space-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-asteroids.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
+- name: white-house-lawn-white-house-window-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colored-circuits.jpg
+- name: blossombar-post-modern-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-00-00.jpg
+- name: oldsmallboat-oldsmallboat-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-really-hot.jpg
+- name: christianity-christianity-under-construction-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dali-two.jpg
+- name: containership-containership-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
+- name: hollywood-building-hollywood-building-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
+- name: oldcabin-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
+- name: status-berlin-status-berlin-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-horiz-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
+- name: server-cloud-server-racks-door-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-wols.jpg
+- name: castle-wall-DSC-0067-monet-one.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-monet-one.JPG
+- name: crow_sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sunday.jpg
+- name: oldcabin-oldcabin-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-pablo-blue.jpg
+- name: castle-wall-DSC-0067-smooth-ride.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smooth-ride.JPG
+- name: dragon-desert-desert-dragon-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smoking-cigarette.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-granite.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-rain.jpg
+- name: old-door-lock-old-door-lock-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kandinsky-bv.jpg
+- name: old-granary-field-granaryfield-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-asteroids.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: walled-garden-walled-garden-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-emily-carr.jpg
+- name: razorcliff-razorcliff-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-really-hot.jpg
+- name: store-on-corner-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
+- name: ellis-island-ellisisland-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-hot-spicy.jpg
+- name: crow-crow-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
+- name: flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
+- name: oldtrain-oldtrain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
+- name: oldhouse-oldhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kand-two.jpg
+- name: castle-wall-DSC-0067-gred-mash.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-gred-mash.JPG
+- name: downtown-los-angeles-downtown-la-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dali-two.JPG
+- name: walled-garden-walled-garden-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-creativity.jpg
+- name: store-on-corner-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gan-vogh.jpg
+- name: locked-up-steam-lock-up-steam-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-rainbow-festival.jpg
+- name: blossombar-sand-paper-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-50-62.jpg
+- name: old-granary-field-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
+- name: gears-4882162452-fa3126b38d-b-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-ww2-dresden.jpg
+- name: old-granary-field-granaryfield-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-nazi-poster.jpg
+- name: dragon-desert-desert-dragon-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-free-woman.jpg
+- name: flower-barbed-wire-flower-barbed-wire-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-aqua.jpg
+- name: berlinwall2-berlinwall-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-nazi-poster.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
+- name: windowmountain-window-mountain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kandinsky-bv.jpg
 ---
 Blackhawks Reacquire Shaw In Trade With Canadiens.&nbsp;Up Close With Jack Flug.&nbsp;Kevin Durant To Sign With Brooklyn Nets.&nbsp;As Amada Cruz Exits Phoenix Art Museum, Others Shown The Door.&nbsp;Kevin Durant To Sign With Brooklyn Nets.&nbsp;Exhibit Is First Major Show Of Artwork By Native Women.&nbsp;Thundering Herd's Jon Elmore Reaches Deal With Boston Celtics.&nbsp;County School Board Members Discussing New Education Bill.&nbsp;
